-------------------------

  - Support MATLAB strings for comparison and output.
  - Support multidimensional cell array output.
    When assert_equals outputs diff information, the structure of 2D cell
    arrays is maintained. The structure of higher dimensions gets linearized.
  - Warn if disable_tests is ineffective, because a suite has been triggered
    individually.


mlUnit 1.9.6 (2023-10-20)
-------------------------

  - Compatibility with MATLAB R2023b.

  - Fix: When using the Ant automation, MATLAB's console output is missing.
  - Fix: When filtering the error stack, mlUnit let its own
    assert_not_exist_file pass through.


mlUnit 1.9.5 (2021-07-19)
-------------------------

  - Compatibility with MATLAB R2022a.
  - mlunit_rerun('what') prints what mlunit_rerun would do as a default action,
    i.e. if being called with no arguments.
  - Give a warning when a test function has the same name as a directory.

  - Fix: When calling a test function on the MATLAB console, and a
    directory of the same name exists, no tests actually execute.


mlUnit 1.9.4 (2021-09-17)
-------------------------

  - Compatibility with MATLAB R2021a.
  - Linux compatibility of mlUnit internal test suites.
  - Don't execute suite_set_up and suite_tear_down, when a test suite
    contains no tests. Either because no test_* functions exist, or
    because all test_* functions were disabled.


mlUnit 1.9.3 (2021-01-25)
-------------------------

  - Support UNIX/Linux execution of build.xml Ant scripts.
  - Allow disabling all of a suite's test cases when using disable_tests.
  - mlunit_rerun allows replay of the most recent suite run (triggered
    by calling run_suite_collection or recursive_test_run). Replaying the
    latest fails and/or errors, allows you to concentrate on them,
    quickly fix them and verify your fix.
  - mlunit_single run only a single test out of a function test suite.
  - Default 'catch_output' to false, so that manual test runs display