@@ -1,4 +1,4 @@
-function suite = build_testsuite_object(self, suitename, funs, excludes) %#ok<INUSL>
+function suite = build_testsuite_object(self, suitename, funs, excludes, excludeReason) %#ok<INUSL>
 %Build a test_suite object from a list of handles.
 %
 %Looks out for special functions set_up, tear_down, suite_set_up and
@@ -7,12 +7,15 @@ function suite = build_testsuite_object(self, suitename, funs, excludes) %#ok<IN
 %  This Software and all associated files are released unter the 
 %  GNU General Public License (GPL), see LICENSE for details.
 
-mlunit_narginchk(4, 4, nargin);
+mlunit_narginchk(5, 5, nargin);
 if ~iscell(funs) || ~all(cellfun(@(f)isa(f,'function_handle'),funs))
     error('funs need be cell array of function_handle objects');
 end
 if ~iscellstr(excludes)
     error('excludes need be cellstr array');
+end
+if ~ischar(excludesReason)
+    error('excludesReason need be char array');
 end
 
 set_up_handle = 0;
@@ -63,7 +66,8 @@ for i=1:numel(funs)
             set_up_handle,...
             tear_down_handle, ...
             fname, ...
-            disabled);
+            disabled, ...
+            excludeReason);
         suite = add_test(suite, testobj);
     end
 end
